# rps_game

./: LICENSE  README.md  requirements.txt  setup.cfg
rps_game/: __init__.py  game.py  schema.sql  score.py
rps_game/static/: style.css
rps_game/templates/: base.html  new_game.html  play_game.html  score.html
tests/: conftest.py  data.sql  test_create_game.py
