[metadata]
name = rps_game
version = 1.0.0
license = MIT
maintainer = Alexander Wong
maintainer_email = alexw@udia.ca
description = A simple rock paper scissors game web application.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
